Added 2 sripts to automate the process of mounting and flashing SDcard. Changed defconfig file.

--- a/buildroot-master/rpi2_custom_defconfig
+++ b/buildroot-master/rpi2_custom_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2015.11-git-g6e4988d Configuration
+# Buildroot 2015.11-git-g8e5c65b-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
