--- a/buildroot-master/rpi2_custom_defconfig
+++ b/buildroot-master/rpi2_custom_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2015.11-git-g8e5c65b-dirty Configuration
+# Buildroot 2015.11-git-g0b450f6-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -289,14 +289,14 @@ BR2_TOOLCHAIN_GCC_AT_LEAST="4.9"
 #
 # System configuration
 #
-BR2_TARGET_GENERIC_HOSTNAME="buildroot"
-BR2_TARGET_GENERIC_ISSUE="Welcome to Buildroot"
+BR2_TARGET_GENERIC_HOSTNAME="tejas"
+BR2_TARGET_GENERIC_ISSUE="Final Image I guess"
 BR2_TARGET_GENERIC_PASSWD_MD5=y
 # BR2_TARGET_GENERIC_PASSWD_SHA256 is not set
 # BR2_TARGET_GENERIC_PASSWD_SHA512 is not set
 BR2_TARGET_GENERIC_PASSWD_METHOD="md5"
-BR2_INIT_BUSYBOX=y
-# BR2_INIT_SYSV is not set
+# BR2_INIT_BUSYBOX is not set
+BR2_INIT_SYSV=y
 
 #
 # systemd needs (e)glibc toolchain, headers >= 3.10
@@ -313,12 +313,11 @@ BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt"
 BR2_ROOTFS_SKELETON_DEFAULT=y
 # BR2_ROOTFS_SKELETON_CUSTOM is not set
 BR2_TARGET_ENABLE_ROOT_LOGIN=y
-BR2_TARGET_GENERIC_ROOT_PASSWD=""
+BR2_TARGET_GENERIC_ROOT_PASSWD="root"
 BR2_SYSTEM_BIN_SH_BUSYBOX=y
-
-#
-# bash, dash, zsh need BR2_PACKAGE_BUSYBOX_SHOW_OTHERS
-#
+# BR2_SYSTEM_BIN_SH_BASH is not set
+# BR2_SYSTEM_BIN_SH_DASH is not set
+# BR2_SYSTEM_BIN_SH_ZSH is not set
 # BR2_SYSTEM_BIN_SH_NONE is not set
 BR2_SYSTEM_BIN_SH="busybox"
 BR2_TARGET_GENERIC_GETTY=y
@@ -341,8 +340,9 @@ BR2_SYSTEM_DHCP=""
 # BR2_TARGET_TZ_INFO is not set
 BR2_ROOTFS_USERS_TABLES=""
 BR2_ROOTFS_OVERLAY=""
-BR2_ROOTFS_POST_BUILD_SCRIPT=""
+BR2_ROOTFS_POST_BUILD_SCRIPT="/home/tejas/BuildRoot_For_Boards/buildroot-master/board/raspberrypi2/pre_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT=""
+BR2_ROOTFS_POST_SCRIPT_ARGS=""
 
 #
 # Kernel
@@ -395,7 +395,7 @@ BR2_PACKAGE_SKELETON=y
 BR2_PACKAGE_BUSYBOX=y
 BR2_PACKAGE_BUSYBOX_CONFIG="package/busybox/busybox.config"
 BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES=""
-# BR2_PACKAGE_BUSYBOX_SHOW_OTHERS is not set
+BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_BUSYBOX_SELINUX is not set
 # BR2_PACKAGE_BUSYBOX_WATCHDOG is not set
 
@@ -490,6 +490,10 @@ BR2_PACKAGE_MPLAYER_ARCH_SUPPORTS=y
 # Compressors and decompressors
 #
 # BR2_PACKAGE_BZIP2 is not set
+
+#
+# gzip needs a toolchain w/ wchar
+#
 # BR2_PACKAGE_INFOZIP is not set
 # BR2_PACKAGE_LZ4 is not set
 # BR2_PACKAGE_LZIP is not set
@@ -534,6 +538,7 @@ BR2_PACKAGE_GOOGLE_BREAKPAD_ARCH_SUPPORTS=y
 # latencytop needs a toolchain w/ wchar, threads
 #
 # BR2_PACKAGE_LMBENCH is not set
+# BR2_PACKAGE_LSOF is not set
 # BR2_PACKAGE_LTP_TESTSUITE is not set
 
 #
@@ -559,8 +564,8 @@ BR2_PACKAGE_GOOGLE_BREAKPAD_ARCH_SUPPORTS=y
 # BR2_PACKAGE_RAMSMP is not set
 # BR2_PACKAGE_RAMSPEED is not set
 # BR2_PACKAGE_RT_TESTS is not set
-BR2_PACKAGE_SPIDEV_TEST=y
-BR2_PACKAGE_STRACE=y
+# BR2_PACKAGE_SPIDEV_TEST is not set
+# BR2_PACKAGE_STRACE is not set
 # BR2_PACKAGE_STRESS is not set
 
 #
@@ -592,17 +597,42 @@ BR2_PACKAGE_CMAKE_ARCH_SUPPORTS=y
 #
 # cvs needs a toolchain w/ wchar
 #
+
+#
+# diffutils needs a toolchain w/ wchar
+#
+# BR2_PACKAGE_DOS2UNIX is not set
+
+#
+# findutils needs a toolchain w/ wchar
+#
 # BR2_PACKAGE_FLEX is not set
+
+#
+# gawk needs a toolchain w/ wchar, dynamic library
+#
 
 #
 # gettext needs a toolchain w/ wchar
 #
 # BR2_PACKAGE_GIT is not set
 # BR2_PACKAGE_GPERF is not set
+
+#
+# grep needs a toolchain w/ wchar
+#
 # BR2_PACKAGE_JQ is not set
 # BR2_PACKAGE_LIBTOOL is not set
 # BR2_PACKAGE_MAKE is not set
+
+#
+# patch needs a toolchain w/ wchar
+#
 # BR2_PACKAGE_PKGCONF is not set
+
+#
+# sed needs a toolchain w/ wchar
+#
 # BR2_PACKAGE_SSTRIP is not set
 # BR2_PACKAGE_SUBVERSION is not set
 
@@ -758,6 +788,7 @@ BR2_PACKAGE_CMAKE_ARCH_SUPPORTS=y
 # BR2_PACKAGE_DIRECTFB is not set
 # BR2_PACKAGE_FBDUMP is not set
 # BR2_PACKAGE_FBGRAB is not set
+# BR2_PACKAGE_FBSET is not set
 # BR2_PACKAGE_FB_TEST_APP is not set
 
 #
@@ -864,6 +895,7 @@ BR2_PACKAGE_RPI_FIRMWARE_BOOT=""
 # cryptsetup needs a toolchain w/ wchar, threads, dynamic library
 #
 # BR2_PACKAGE_DBUS is not set
+# BR2_PACKAGE_DEVMEM2 is not set
 # BR2_PACKAGE_DMRAID is not set
 # BR2_PACKAGE_DTV_SCAN_TABLES is not set
 # BR2_PACKAGE_DVB_APPS is not set
@@ -896,9 +928,10 @@ BR2_PACKAGE_RPI_FIRMWARE_BOOT=""
 #
 # gvfs needs a toolchain w/ wchar, threads
 #
+# BR2_PACKAGE_HDPARM is not set
 # BR2_PACKAGE_HWDATA is not set
 # BR2_PACKAGE_HWLOC is not set
-BR2_PACKAGE_I2C_TOOLS=y
+# BR2_PACKAGE_I2C_TOOLS is not set
 # BR2_PACKAGE_INPUT_EVENT_DAEMON is not set
 # BR2_PACKAGE_INPUT_TOOLS is not set
 # BR2_PACKAGE_IOSTAT is not set
@@ -961,7 +994,7 @@ BR2_PACKAGE_I2C_TOOLS=y
 # BR2_PACKAGE_READ_EDID is not set
 # BR2_PACKAGE_RNG_TOOLS is not set
 # BR2_PACKAGE_RPI_USERLAND is not set
-BR2_PACKAGE_RTL8188EU=y
+# BR2_PACKAGE_RTL8188EU is not set
 # BR2_PACKAGE_RTL8821AU is not set
 # BR2_PACKAGE_SANE_BACKENDS is not set
 # BR2_PACKAGE_SDPARM is not set
@@ -1135,7 +1168,7 @@ BR2_PACKAGE_MONO_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LZO is not set
 # BR2_PACKAGE_SNAPPY is not set
 # BR2_PACKAGE_SZIP is not set
-BR2_PACKAGE_ZLIB=y
+# BR2_PACKAGE_ZLIB is not set
 
 #
 # Crypto
@@ -1553,7 +1586,7 @@ BR2_PACKAGE_CANFESTIVAL_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBOAUTH is not set
 # BR2_PACKAGE_LIBOPING is not set
 # BR2_PACKAGE_LIBOSIP2 is not set
-BR2_PACKAGE_LIBPCAP=y
+# BR2_PACKAGE_LIBPCAP is not set
 # BR2_PACKAGE_LIBRSYNC is not set
 # BR2_PACKAGE_LIBSHAIRPLAY is not set
 # BR2_PACKAGE_LIBSHOUT is not set
@@ -1762,11 +1795,7 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 # libunistring needs a toolchain w/ wchar
 #
 # BR2_PACKAGE_LINENOISE is not set
-BR2_PACKAGE_NCURSES=y
-# BR2_PACKAGE_NCURSES_TARGET_PANEL is not set
-# BR2_PACKAGE_NCURSES_TARGET_FORM is not set
-# BR2_PACKAGE_NCURSES_TARGET_MENU is not set
-# BR2_PACKAGE_NCURSES_TARGET_PROGS is not set
+# BR2_PACKAGE_NCURSES is not set
 
 #
 # newt needs a toolchain w/ wchar, dynamic library
@@ -1830,6 +1859,7 @@ BR2_PACKAGE_NCURSES=y
 # BR2_PACKAGE_ARGUS is not set
 # BR2_PACKAGE_ARPTABLES is not set
 # BR2_PACKAGE_ATFTP is not set
+# BR2_PACKAGE_AUTOSSH is not set
 # BR2_PACKAGE_AVAHI is not set
 # BR2_PACKAGE_AXEL is not set
 # BR2_PACKAGE_BANDWIDTHD is not set
@@ -1859,11 +1889,17 @@ BR2_PACKAGE_NCURSES=y
 # BR2_PACKAGE_CONNTRACK_TOOLS is not set
 # BR2_PACKAGE_CRDA is not set
 # BR2_PACKAGE_CTORRENT is not set
+# BR2_PACKAGE_DHCP is not set
 # BR2_PACKAGE_DHCPCD is not set
 # BR2_PACKAGE_DHCPDUMP is not set
 # BR2_PACKAGE_DNSMASQ is not set
 # BR2_PACKAGE_DRBD_UTILS is not set
-# BR2_PACKAGE_DROPBEAR is not set
+BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_DROPBEAR_CLIENT=y
+# BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS is not set
+BR2_PACKAGE_DROPBEAR_SMALL=y
+# BR2_PACKAGE_DROPBEAR_WTMP is not set
+# BR2_PACKAGE_DROPBEAR_LASTLOG is not set
 # BR2_PACKAGE_EBTABLES is not set
 
 #
@@ -1886,7 +1922,12 @@ BR2_PACKAGE_NCURSES=y
 #
 # BR2_PACKAGE_IBRDTN_TOOLS is not set
 # BR2_PACKAGE_IBRDTND is not set
-BR2_PACKAGE_IFTOP=y
+# BR2_PACKAGE_IFPLUGD is not set
+# BR2_PACKAGE_IFTOP is not set
+
+#
+# ifupdown needs an (e)glibc or musl toolchain w/ headers >= 3.0
+#
 # BR2_PACKAGE_IGH_ETHERCAT is not set
 
 #
@@ -1894,7 +1935,7 @@ BR2_PACKAGE_IFTOP=y
 #
 # BR2_PACKAGE_INADYN is not set
 # BR2_PACKAGE_IODINE is not set
-BR2_PACKAGE_IPERF=y
+# BR2_PACKAGE_IPERF is not set
 # BR2_PACKAGE_IPERF3 is not set
 # BR2_PACKAGE_IPROUTE2 is not set
 # BR2_PACKAGE_IPSEC_TOOLS is not set
@@ -1949,9 +1990,15 @@ BR2_PACKAGE_IPERF=y
 # BR2_PACKAGE_NCFTP is not set
 # BR2_PACKAGE_NDISC6 is not set
 # BR2_PACKAGE_NETATALK is not set
+# BR2_PACKAGE_NETCAT is not set
+
+#
+# netcat-openbsd needs an (e)glibc toolchain w/ threads
+#
 # BR2_PACKAGE_NETPLUG is not set
 # BR2_PACKAGE_NETSNMP is not set
 # BR2_PACKAGE_NETSTAT_NAT is not set
+# BR2_PACKAGE_NET_TOOLS is not set
 
 #
 # NetworkManager needs udev /dev management and a (e)glibc toolchain w/ headers >= 3.7
@@ -2027,6 +2074,7 @@ BR2_PACKAGE_IPERF=y
 # BR2_PACKAGE_TCPDUMP is not set
 # BR2_PACKAGE_TCPING is not set
 # BR2_PACKAGE_TCPREPLAY is not set
+# BR2_PACKAGE_TFTPD is not set
 # BR2_PACKAGE_THTTPD is not set
 # BR2_PACKAGE_TINC is not set
 # BR2_PACKAGE_TINYHTTPD is not set
@@ -2046,6 +2094,14 @@ BR2_PACKAGE_IPERF=y
 # BR2_PACKAGE_VPNC is not set
 # BR2_PACKAGE_VSFTPD is not set
 # BR2_PACKAGE_VTUN is not set
+
+#
+# wget needs a toolchain w/ wchar
+#
+
+#
+# whois needs a toolchain w/ wchar
+#
 # BR2_PACKAGE_WIRELESS_REGDB is not set
 # BR2_PACKAGE_WIRELESS_TOOLS is not set
 
@@ -2111,6 +2167,7 @@ BR2_PACKAGE_IPERF=y
 #
 # opkg needs a toolchain w/ wchar
 #
+# BR2_PACKAGE_RPM is not set
 
 #
 # Real-Time
@@ -2132,6 +2189,9 @@ BR2_PACKAGE_IPERF=y
 #
 # Shells
 #
+# BR2_PACKAGE_BASH is not set
+# BR2_PACKAGE_DASH is not set
+# BR2_PACKAGE_ZSH is not set
 
 #
 # Utilities
@@ -2153,7 +2213,9 @@ BR2_PACKAGE_IPERF=y
 # BR2_PACKAGE_PINENTRY is not set
 # BR2_PACKAGE_SCREEN is not set
 # BR2_PACKAGE_SUDO is not set
+# BR2_PACKAGE_TIME is not set
 # BR2_PACKAGE_TMUX is not set
+# BR2_PACKAGE_WHICH is not set
 # BR2_PACKAGE_XMLSTARLET is not set
 # BR2_PACKAGE_XXHASH is not set
 
@@ -2164,7 +2226,14 @@ BR2_PACKAGE_IPERF=y
 # BR2_PACKAGE_ATTR is not set
 BR2_PACKAGE_AUDIT_ARCH_SUPPORTS=y
 # BR2_PACKAGE_AUDIT is not set
+# BR2_PACKAGE_BOOTUTILS is not set
+
+#
+# coreutils needs a toolchain w/ wchar
+#
 # BR2_PACKAGE_CPULOAD is not set
+BR2_PACKAGE_DCRON=y
+# BR2_PACKAGE_DEBIANUTILS is not set
 # BR2_PACKAGE_FTOP is not set
 # BR2_PACKAGE_GETENT is not set
 # BR2_PACKAGE_HTOP is not set
@@ -2189,18 +2258,28 @@ BR2_PACKAGE_INITSCRIPTS=y
 #
 # polkit needs a toolchain w/ wchar, threads
 #
+# BR2_PACKAGE_PROCPS_NG is not set
+# BR2_PACKAGE_PSMISC is not set
 # BR2_PACKAGE_PWGEN is not set
 
 #
 # quota needs a toolchain w/ wchar, threads
 #
+# BR2_PACKAGE_RSYSLOG is not set
 # BR2_PACKAGE_SCRYPT is not set
 # BR2_PACKAGE_SMACK is not set
+# BR2_PACKAGE_START_STOP_DAEMON is not set
 
 #
 # supervisor needs the python interpreter
 #
+# BR2_PACKAGE_SYSKLOGD is not set
 BR2_PACKAGE_SYSTEMD_ARCH_SUPPORTS=y
+BR2_PACKAGE_SYSVINIT=y
+
+#
+# tar needs a toolchain w/ wchar
+#
 
 #
 # util-linux needs a toolchain w/ wchar
@@ -2211,6 +2290,7 @@ BR2_PACKAGE_SYSTEMD_ARCH_SUPPORTS=y
 #
 # BR2_PACKAGE_ED is not set
 # BR2_PACKAGE_JOE is not set
+# BR2_PACKAGE_LESS is not set
 
 #
 # mc needs a toolchain w/ threads, wchar
@@ -2220,6 +2300,10 @@ BR2_PACKAGE_SYSTEMD_ARCH_SUPPORTS=y
 # nano needs a toolchain w/ wchar
 #
 # BR2_PACKAGE_UEMACS is not set
+
+#
+# vim needs a toolchain w/ wchar
+#
 
 #
 # Filesystem images
