--- a/buildroot-master/rpi2_custom_defconfig
+++ b/buildroot-master/rpi2_custom_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2015.11-git-gdbb8b26 Configuration
+# Buildroot 2015.11-git-g93d92a2 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -1422,7 +1422,7 @@ BR2_PACKAGE_LIBAIO_ARCH_SUPPORTS=y
 #
 # BR2_PACKAGE_BENEJSON is not set
 # BR2_PACKAGE_CJSON is not set
-# BR2_PACKAGE_EXPAT is not set
+BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_EZXML is not set
 # BR2_PACKAGE_JANSSON is not set
 # BR2_PACKAGE_JSON_C is not set
@@ -1647,8 +1647,8 @@ BR2_PACKAGE_LIBPCAP=y
 #
 # Other
 #
-# BR2_PACKAGE_APR is not set
-# BR2_PACKAGE_APR_UTIL is not set
+BR2_PACKAGE_APR=y
+BR2_PACKAGE_APR_UTIL=y
 # BR2_PACKAGE_ARGP_STANDALONE is not set
 # BR2_PACKAGE_ARMADILLO is not set
 # BR2_PACKAGE_ATF is not set
@@ -1804,7 +1804,11 @@ BR2_PACKAGE_NCURSES=y
 #
 # newt needs a toolchain w/ wchar, dynamic library
 #
-# BR2_PACKAGE_PCRE is not set
+BR2_PACKAGE_PCRE=y
+# BR2_PACKAGE_PCRE_16 is not set
+# BR2_PACKAGE_PCRE_32 is not set
+# BR2_PACKAGE_PCRE_UTF is not set
+# BR2_PACKAGE_PCRE_UCP is not set
 # BR2_PACKAGE_POPT is not set
 # BR2_PACKAGE_READLINE is not set
 # BR2_PACKAGE_SLANG is not set
@@ -1859,7 +1863,7 @@ BR2_PACKAGE_NCURSES=y
 # aiccu needs a toolchain w/ wchar, threads
 #
 # BR2_PACKAGE_AIRCRACK_NG is not set
-# BR2_PACKAGE_APACHE is not set
+BR2_PACKAGE_APACHE=y
 # BR2_PACKAGE_ARGUS is not set
 # BR2_PACKAGE_ARPTABLES is not set
 # BR2_PACKAGE_ATFTP is not set
