--- a/buildroot-master/rpi2_custom_defconfig
+++ b/buildroot-master/rpi2_custom_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2015.11-git-g93d92a2 Configuration
+# Buildroot 2015.11-git-g30c43ff Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -1897,7 +1897,11 @@ BR2_PACKAGE_APACHE=y
 # BR2_PACKAGE_CONNTRACK_TOOLS is not set
 # BR2_PACKAGE_CRDA is not set
 # BR2_PACKAGE_CTORRENT is not set
-# BR2_PACKAGE_DHCP is not set
+BR2_PACKAGE_DHCP=y
+BR2_PACKAGE_DHCP_SERVER=y
+BR2_PACKAGE_DHCP_SERVER_DELAYED_ACK=y
+BR2_PACKAGE_DHCP_RELAY=y
+BR2_PACKAGE_DHCP_CLIENT=y
 # BR2_PACKAGE_DHCPCD is not set
 # BR2_PACKAGE_DHCPDUMP is not set
 # BR2_PACKAGE_DNSMASQ is not set
@@ -1908,7 +1912,7 @@ BR2_PACKAGE_DROPBEAR_CLIENT=y
 BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_DROPBEAR_WTMP is not set
 # BR2_PACKAGE_DROPBEAR_LASTLOG is not set
-# BR2_PACKAGE_EBTABLES is not set
+BR2_PACKAGE_EBTABLES=y
 
 #
 # ejabberd needs erlang
@@ -1943,12 +1947,12 @@ BR2_PACKAGE_IFTOP=y
 #
 # BR2_PACKAGE_INADYN is not set
 # BR2_PACKAGE_IODINE is not set
-# BR2_PACKAGE_IPERF is not set
+BR2_PACKAGE_IPERF=y
 # BR2_PACKAGE_IPERF3 is not set
 # BR2_PACKAGE_IPROUTE2 is not set
 # BR2_PACKAGE_IPSEC_TOOLS is not set
 # BR2_PACKAGE_IPSET is not set
-# BR2_PACKAGE_IPTABLES is not set
+BR2_PACKAGE_IPTABLES=y
 # BR2_PACKAGE_IPTRAF_NG is not set
 # BR2_PACKAGE_IPUTILS is not set
 # BR2_PACKAGE_IW is not set
